--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,30 @@ li{
     display: flex;
     color: white;
 }
+.list-item{
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    width: 150px;
+}
+.social{
+    display: flex;
+    color: white;
+    width: 200px;
+}
 nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+.header-content h1{
+    position: relative;
+}
+.header-content p{
+    position: absolute;
+    bottom: 280px;
+    letter-spacing: 17px;
+    left: 534px;
 }
 .logo{
     position: relative;
@@ -96,16 +116,17 @@ nav{
 header img{
     width: 100%;
 }
+
 .team-item img{
     width: 40px;
     height: 40px;
     border-radius: 50%;
 }
 section#team{
-    background: #000000;
     color: #ffffff;
-    padding: 80px 0;
+    padding: 150px 0;
     text-align: center;
+    background: #11749e;
 
 }
 
@@ -125,14 +146,18 @@ section#team{
     border-radius: 50%;
 }
 #blog-b{
-    display: flex;
+    display: block;
     text-align: center;
+    height: 1022px;
+}
+.blog-title{
+    padding: 180px;
 }
 #blog-b .row{
     display: flex;
     justify-content: space-around;
 }
-.blog-title{
+.blog-title p{
     font-size: 38px;
     text-transform: uppercase;
 }
@@ -140,7 +165,7 @@ section#team{
     font-size: 30px;
     text-transform: capitalize;
 }
-#colum .row{
+#colum {
     display: flex;
 }
 #colum strong{
@@ -154,19 +179,21 @@ section#team{
 .colum-item img{
     width: 100%;
 }
+
 .doc{
-    height: 339px;
+    height: 596px;
     background: #1d1d1d;
     margin: 0;
-    padding: 61px 22px 0 95px;
+    padding: 182px 0 0 128px;
     color: #ffff;
+
 }
 .doc-2{
     background: #f3f3f3;
     color: #212121;
-    height: 339px;
+    height: 500px;
     margin: 0;
-    padding: 61px 22px 0 95px;
+    padding: 178px 0 0 125px;
 }
 #blu{
     background: #11749e;
