--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?26893075');
-  src: url('../font/fontello.eot?26893075#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?26893075') format('woff2'),
-       url('../font/fontello.woff?26893075') format('woff'),
-       url('../font/fontello.ttf?26893075') format('truetype'),
-       url('../font/fontello.svg?26893075#fontello') format('svg');
+  src: url('../font/fontello.eot?58821694');
+  src: url('../font/fontello.eot?58821694#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?58821694') format('woff2'),
+       url('../font/fontello.woff?58821694') format('woff'),
+       url('../font/fontello.ttf?58821694') format('truetype'),
+       url('../font/fontello.svg?58821694#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?26893075#fontello') format('svg');
+    src: url('../font/fontello.svg?58821694#fontello') format('svg');
   }
 }
 */
@@ -55,8 +55,8 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-twitter:before { content: '\e800'; } /* '' */
-.icon-down-open:before { content: '\e801'; } /* '' */
-.icon-facebook:before { content: '\f09a'; } /* '' */
-.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
-.icon-skype:before { content: '\f339'; } /* '' */
+.icon-skype-outline:before { content: '\e800'; } /* '' */
+.icon-linkedin:before { content: '\e801'; } /* '' */
+.icon-down-open:before { content: '\f004'; } /* '' */
+.icon-twitter:before { content: '\f309'; } /* '' */
+.icon-facebook:before { content: '\f30c'; } /* '' */
