--- a/css/style.css
+++ b/css/style.css
@@ -116,11 +116,21 @@ nav{
 header img{
     width: 100%;
 }
-
-.team-item img{
-    width: 40px;
-    height: 40px;
+.border-blu{
+    width: 160px;
+    height: 160px;
+    background: #2e85aa;
     border-radius: 50%;
+    text-align: center;
+    position: relative;
+}
+.team-item img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 69px;
+    margin: -44px;
 }
 section#team{
     color: #ffffff;
@@ -137,6 +147,7 @@ section#team{
     margin-top: 20px;
     position: relative;
     margin-bottom: 93px;
+
 }
 #team .row{
     display: flex;
@@ -197,7 +208,8 @@ section#team{
 }
 #blu{
     background: #11749e;
-    padding: 150px 0;
+    color: #f5f5f5;
+    padding: 110px 0 140px;
 }
 #blu .row{
     display: flex;
@@ -206,7 +218,9 @@ section#team{
     display: flex;
 }
 #akita-dog{
-    background: url(../img/back.jpg)no-repeat top left / cover;
+    background: url(../img/banner2.jpg)no-repeat top left ;
+    background-size: cover;
+    padding: 100px 0;
 }
 #akita-dog .row{
     display: flex;
@@ -227,6 +241,8 @@ section#team{
     background: #11749e;
     font-size: 15px;
     text-transform: uppercase;
+    margin: 25px 0;
+    padding: 12px 0 12px 20px;
 }
 .meedle{
     width: 400px;
@@ -234,6 +250,8 @@ section#team{
     background: #11749e;
     font-size: 15px;
     text-transform: uppercase;
+    margin: 25px 0;
+    padding: 12px 0 12px 20px;
 }
 .bottom{
     width: 430px;
@@ -241,6 +259,8 @@ section#team{
     background: #11749e;
     font-size: 15px;
     text-transform: uppercase;
+    margin: 25px 0;
+    padding: 12px 0 12px 20px;
 }
 #our-team .row{
     display: flex;
@@ -260,7 +280,7 @@ section#team{
 }
 .unit{
     position: absolute;
-    bottom: -10px;
+    bottom: 0;
     left: 46px;
     background: #ffff;
     width: 190px;
@@ -283,4 +303,35 @@ footer {
     display: flex;
     padding: 20px;
     justify-content: space-around;
+}
+footer .col-lg-6{
+    width: 50%;
+    color: #ffffff;
+}
+#form{
+    background: url("../img/banner3.jpg");
+}
+.mobil-menu span{
+    display: flex;
+    width: 40px;
+    height: 2px;
+    align-items: center;
+    background: #856404;
+    position: relative;
+}
+.mobil-menu span:after{
+    content: "";
+    width: 100%;
+    height: 4px;
+    background: #856404;
+    position: absolute;
+    top: 8px;
+}
+.mobil-menu span:before{
+    content: "";
+    width: 100%;
+    height: 4px;
+    background: #856404;
+    position: absolute;
+    bottom: 8px;
 }
